<resources>
    <string name="app_name">Livros</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="digite_para_filtrar">Digite para filtrar...</string>
    <string name="title_activity_detalhe">Detalhe Livro</string>
    <string name="titulo">Título</string>
    <string name="autor">Autor</string>
    <string name="isbn">ISBN</string>
    <string name="salvar">Salvar</string>

    <string name="ficcao">Ficção</string>
    <string name="romance">Romance</string>
    <string name="terror">Terror</string>
    <string name="drama">Drama</string>
    <string name="tecnico">Técnico</string>
    <string name="titulo_autor_obrigatorios">Título e Autor são obrigatórios</string>
    <string name="novo_livro">Novo Livro</string>
    <string name="excluir_todos">Excluir todos</string>
    <string name="excluir">Excluir</string>
    <string name="cancelar">Cancelar</string>

    <string-array name="generos">
        <item>@string/drama</item>
        <item>@string/ficcao</item>
        <item>@string/romance</item>
        <item>@string/tecnico</item>
        <item>@string/terror</item>
    </string-array>

</resources>
